added dockerignore to persist pgadmin permissions, updated gitignore to include empty directories needed for setup if starting from scratch for some reason

--- a/week_1_basics_n_setup/2_docker_sql/.gitignore
+++ b/week_1_basics_n_setup/2_docker_sql/.gitignore
@@ -1,4 +1,11 @@
 .ipynb_checkpoints/
-ny_taxi_postgres_data/
 *.csv
 *.gz
+# exclude everything
+data_pgadmin/*
+# exception to the rule
+!data_pgadmin/.gitkeep 
+# exclude everything
+data/*
+# exception to the rule
+!data/.gitkeep
