--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ serving_dir
 .ipynb_checkpoints/
 !week_6_stream_processing/avro_example/data/rides.csv
 sandbox.py
+!week_4_analytics_engineering/seeds/taxi_zone_lookup.csv
